# domaintocompanylegalname

./: .replit  ARCHITECTURE_DECISION.md  CHECKPOINT_SIMPLIFIED_BETA_ARCHITECTURE.md  CODE_HYGIENE_REPORT.md  DB_ARCHITECTURE_COMPARISON.md  FASTAPI_COMPARISON.md  FLAT_VS_WIDE_DEMO.md  PROJECT_STRUCTURE.md  UNIQUE_DOMAIN_STRATEGY.md  analytics_server.py  domain_hash_service.py  extract_exxon_footer.js  extract_footer.js  fastapi_poc.py  jest.config.js  level1_extraction_demo.js  llm_ner_poc_framework.js  merck_content_analysis.md  package-lock.json  package.json  pyproject.toml  replit.md  replit.nix  requirements.txt  sample_domains.txt  screenshot_ner_poc.js  start-beta-server.sh  test-beta-server.js  test-crawlee-debug.js  test-fast-extraction.js  test-llm-cleaning.js  test-scrapy.py  test-serialized-extractors.js  test_additional_irish.txt  test_analytics.txt  test_brazilian_companies.txt  test_chinese_companies.txt  test_comprehensive_brazilian.txt  test_domains.txt  test_duplicates.txt  (+22 more)
Critical Document/: GLEIFInteractiveSearch.md  GLEIF_KNOWLEDGE_BASE_DESIGN.md  Json_to_Typescript.md  PerplexityHowTo.md  The-Problem-Statement.md  domain-entity-claims-framework.md
HowTo/: GLEIFHowTo.md  README.md  axios-cheerio-dump-API.md  test-non-english-cleaning.ts  test_geographic_extraction.js
Project-History/: Original-Project-Specification-June-2025.md  README.md
RoadAhead/: database-arbitration-strategy.md  model-context-protocol-integration.md
archived/: README.md
attached_assets/: GLEIF API Reference for LLM Integration_1751118924047.md  (+65 more)
client/: README.md
(+426 files in other folders)
